# Just-For-Fun

./: README  rotating_status_xmpp.py
C++11/: CMakeLists.txt  README  microcounter.cpp  pnqueens.cpp  skiplist_priority_queue.cpp  testThread.cpp
Garmin Pilot KML cleaner/: .gitignore  init.cmd  init.ps1  init.sh  kml_cleaner.py  requirements.txt
NYTSpellingBee/: spellingbee.py
Scientific-Calculator/: Report.txt  ScientificCalculator.cpp
XMPP/: rotating_status_xmpp.py
